--- a/app/src/main/res/layout/fragment_city_bikes.xml
+++ b/app/src/main/res/layout/fragment_city_bikes.xml
@@ -8,7 +8,7 @@
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
-        app:queryHint="Search movie"
+        app:queryHint="Search bike companies"
         android:layout_height="wrap_content"
         android:theme="@style/Widget.AppCompat.SearchView"
         android:iconifiedByDefault="false" />
